# webmtg-system

./: .cursorignore  .gitignore  .markdownlint.yml  LICENSE  README.md  docker-compose.yml
.cursor/rules/: globals.mdc
.cursor/rules/dev-rules/: backend-coding-rule.mdc  frontend-coding-rule.mdc
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 07069c6b94c6_initial.py
backend/scripts/: setup_python_path.sh
backend/src/infrastructure/database/models/: __init__.py  base.py  meeting_schedule.py  participant.py  user.py
backend/src/presentation/: main.py
docs/: Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/projects/: index.md
docs/projects/development/: memorandum.md  setup.md
docs/projects/overview/: architecture.md  index.md
docs/projects/static/css/: common.css  override.css
docs/projects/tech-stack/: frontend.md  index.md  key-technologies.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: app.tsx  main.tsx
frontend/src/components/ui/: button.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/auth/api/: auth.api.ts
frontend/src/features/auth/components/: login-form.tsx
frontend/src/features/auth/routes/: LoginPage.tsx
frontend/src/features/auth/types/: auth.schema.ts
frontend/src/features/dashboard/: README.md  index.ts
frontend/src/shared/atoms/: auth.ts  index.ts
frontend/src/shared/components/ui/: button.tsx  (+2 more)
(+4 files in other folders)
