[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
    "fastapi[all]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "ipython>=9.2.0",
]

[tool.rye.scripts]
server = "uvicorn src.presentation.main:app --reload --host 0.0.0.0 --port 8000"
makemigrations = ["alembic", "revision", "--autogenerate", "-m"]
migrate = ["alembic", "upgrade", "head"]
