[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.9",
    "mkdocs-monorepo-plugin>=1.1.0",
    "mkdocs-table-reader-plugin>=3.1.0",
]

[tool.rye.scripts]
serve = "mkdocs serve -a 127.0.0.1:8100"
